[project]
name = "denon-rs232"
version = "0.1.0"
description = "Async library to control Denon receivers over RS232"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Paulus Schoutsen", email = "balloob@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "serialx>=0.7.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: System :: Hardware",
    "Framework :: AsyncIO",
]

[project.scripts]
denon-rs232 = "denon_rs232.__main__:main"

[project.urls]
Repository = "https://github.com/balloob/denon-rs232"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
